<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightYellow">

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:stretchColumns="1">

        <TableRow
            android:gravity="center_vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/cuenta"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|bottom"
                android:paddingBottom="5dp"
                android:text="@string/cuenta"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="10"
                android:hint="@string/insert_cuenta"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/txt_pass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="left|bottom"
                android:paddingBottom="5dp"
                android:text="@string/password"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="10"
                android:hint="@string/insert_password"
                android:inputType="textPassword" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/registrarse" />


    </LinearLayout>

    <ImageView
        android:id="@+id/fondo_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Goldenrod"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/icono_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/logo"
        android:visibility="gone" />

</RelativeLayout>