<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table_concepto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/navigation_bar"
    android:background="@color/LightYellow">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:shrinkColumns="0"
        android:stretchColumns="*">

        <TableRow android:minHeight="50dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dFechaInforme" />

            <TextView
                android:id="@+id/dfecha_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="12" />

        </TableRow>

        <TableRow android:minHeight="50dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hFechaInforme" />

            <TextView
                android:id="@+id/hfecha_edittext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="12" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kmsInicialesPDF" />

            <EditText
                android:id="@+id/kmsiniciales_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="12"
                android:hint="0"
                android:inputType="number" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kmsFinalesPDF" />

            <EditText
                android:id="@+id/kmsfinales_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="12"
                android:hint="0"
                android:inputType="number" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/cinforme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/envInforme"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/crearInforme" />

        <Button
            android:id="@+id/envInforme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/visuInforme"
            android:layout_alignEnd="@+id/cinforme"
            android:layout_alignRight="@+id/cinforme"
            android:layout_marginBottom="10dp"
            android:text="@string/enviarInforme" />

        <Button
            android:id="@+id/visuInforme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/visualizarInforme" />


    </LinearLayout>

</RelativeLayout>
