<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/movdetalle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/LightYellow"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:theme="@style/AppTheme">

    <TableRow
        android:gravity="center_vertical"
        android:padding="5dp">

    <TextView
            android:id="@+id/concepto_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concepto"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/concepto_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="12" />

    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:padding="5dp">

    <TextView
            android:id="@+id/tipo_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importe"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/importe_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="12"
            android:hint="0.0"
            android:inputType="numberDecimal|numberSigned" />

    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/dias_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tipo_textview"
            android:text="@string/dias"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/numdias_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/importe_edittext"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/importe_edittext"
            android:layout_below="@+id/tipo_textview"
            android:layout_span="12"
            android:hint="0"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/fechainicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/fechainicial_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="12"
            android:hint="@string/select_fecha"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/Wheat"
            android:text="@string/guardar" />

    </RelativeLayout>

</TableLayout>